--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,19 @@
 train/
 run/
 bin/
+etc/
 include/
+share/
+Include/
+Lib/
+Scripts/
 lib/
 lib64
 README.md
 Dockerfile
 requirements.txt
 pyvenv.cfg
+.gitignore
+main-view.png
+run.ps1
+run.sh
